--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -74,7 +74,7 @@
   {
     "title": "Word game",
     "imageSrc": "/assets/projectsimg/Word.png",
-    "description": "This is a word game featuring League of Legends items and characters. It's one of the first apps I created, combining my love for gaming with programming.",
+    "description": "This is a word game featuring League of Legends items and characters. It's one of the first apps I created.",
     "skills": ["CSS", "HTML", "JavaScript"],
     "demo": "https://word-game-lol.netlify.app/",
     "source": "https://word-game-lol.netlify.app/"
@@ -82,7 +82,7 @@
   {
     "title": "Image search app",
     "imageSrc": "/assets/projectsimg/Imgapp.png",
-    "description": "This is one of my first applications, designed to search for images. It's a straightforward project that showcases the basics of building a functional search interface.",
+    "description": "This is one of my first applications, designed to search for images. It's a straightforward project.",
     "skills": ["CSS", "HTML", "JavaScript", "API"],
     "demo": "https://daves-img-search.netlify.app/",
     "source": "https://github.com/DivineDragonDave/img-s-kning"
